<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/navigation_group_screens"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_balance"
            android:icon="@drawable/ic_navigation_item_balance"
            android:title="@string/text_navigation_item_balance" />

        <item
            android:id="@+id/navigation_item_wallets"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/text_navigation_item_wallets" />

        <item
            android:id="@+id/navigation_item_templates"
            android:icon="@drawable/ic_templates"
            android:title="@string/text_navigation_item_templates" />

        <item
            android:id="@+id/navigation_item_settings"
            android:icon="@drawable/ic_navigation_item_settings"
            android:title="@string/text_navigation_item_settings" />
        <item
            android:id="@+id/navigation_item_info"
            android:icon="@drawable/ic_navigation_item_info"
            android:title="@string/text_navigation_item_info" />
    </group>
</menu>